add: model and pipeline
